deploy/kuztomize/deployment-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"java-app:latest","namespace":"sunexus-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","pause":"false"}]'
  creationTimestamp: "2023-11-22T10:56:42Z"
  generation: 10
  name: java-app
  namespace: sunexus-dev
  resourceVersion: "1003310630"
  uid: 326d110d-643a-4250-8886-bc0886d28a42
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: java-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/sunexus-dev/java-app@sha256:f5d663405fc42f73c60db53854e2842ebd65e905b0ec95f0670b632ab3790298
        imagePullPolicy: IfNotPresent
        name: container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2023-11-22T19:10:41Z"
    lastUpdateTime: "2023-11-22T19:10:41Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-11-22T10:56:42Z"
    lastUpdateTime: "2023-11-23T13:48:47Z"
    message: ReplicaSet "java-app-5c4f9dd4d6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 10
