deploy/kuztomize/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2023-11-23T13:11:48Z"
  generation: 5
  name: nginx-deployment
  namespace: sunexus-dev
  resourceVersion: "1003210082"
  uid: 3ac9a5d7-1332-4d3a-86b7-ff95fad05d1a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-deployment
    spec:
      containers:
      - command:
        - nginx
        - -g
        - daemon off;
        image: registry.access.redhat.com/ubi8/nginx-120
        imagePullPolicy: Always
        name: container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src
          name: configvolume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: dependency-security-report
        name: configvolume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-11-23T13:19:12Z"
    lastUpdateTime: "2023-11-23T13:19:12Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-11-23T13:11:48Z"
    lastUpdateTime: "2023-11-23T13:19:12Z"
    message: ReplicaSet "nginx-deployment-85d4fc85d9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
